<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fragment_restaurant_details_picture_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="15dp">

                <TextView
                    android:id="@+id/fragment_restaurant_details_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toTopOf="@+id/fragment_restaurant_details_infos_text_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fragment_restaurant_details_infos_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_restaurant_details_name_text_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/fragment_restaurant_details_call_button"
                    style="@style/FragmentRestaurantDetailsButton"
                    android:drawableTop="@drawable/ic_call_orange_24dp"
                    android:text="@string/call_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/fragment_restaurant_details_like_button"
                    style="@style/FragmentRestaurantDetailsButton"
                    android:drawableTop="@drawable/ic_star_orange_24dp"
                    android:text="@string/like_button"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_restaurant_details_website_button"
                    app:layout_constraintStart_toEndOf="@+id/fragment_restaurant_details_call_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/fragment_restaurant_details_website_button"
                    style="@style/FragmentRestaurantDetailsButton"
                    android:drawableTop="@drawable/ic_public_orange_24dp"
                    android:text="@string/website_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>