<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.restaurantDetails.RestaurantDetailsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_restaurant_details_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="10dp"
        app:elevation="6dp"
        app:layout_anchor="@+id/activity_restaurant_details_picture_image_view"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="#FFFEFE"
        app:tint="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/activity_restaurant_details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ToolbarStyle" />
            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/activity_restaurant_details_picture_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/restaurant_picture_description"
                    android:src="@drawable/ic_photo_black_24dp" />

                <include
                    layout="@layout/progress_bar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="15dp">

                <TextView
                    android:id="@+id/activity_restaurant_details_name_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:padding="@dimen/default_small_margin"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_restaurant_details_infos_text_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="wrap"
                    app:layout_constraintWidth_percent="0.7" />

                <RatingBar
                    android:id="@+id/activity_restaurant_details_note_rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="3"
                    android:theme="@style/RatingBarStyle"
                    app:layout_constraintBottom_toTopOf="@+id/activity_restaurant_details_infos_text_view"
                    app:layout_constraintLeft_toRightOf="@+id/activity_restaurant_details_name_text_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/activity_restaurant_details_infos_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details_name_text_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/activity_restaurant_details_call_button"
                    style="@style/ActivityRestaurantDetailsButton"
                    android:drawableTop="@drawable/ic_call_orange_24dp"
                    android:text="@string/call_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/activity_restaurant_details_like_button"
                    style="@style/ActivityRestaurantDetailsButton"
                    android:drawableTop="@drawable/ic_star_border_orange_24dp"
                    android:text="@string/like_button"
                    app:layout_constraintEnd_toStartOf="@+id/activity_restaurant_details_website_button"
                    app:layout_constraintStart_toEndOf="@+id/activity_restaurant_details_call_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/activity_restaurant_details_website_button"
                    style="@style/ActivityRestaurantDetailsButton"
                    android:drawableTop="@drawable/ic_public_orange_24dp"
                    android:text="@string/website_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/colorLightGrey" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_restaurant_details_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>